outputs/tsp_constructive-constructive/2025-09-20_00-37-24/evaluations/problem_eval4506850837016797741_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, while maintaining 90% selection from top 3 candidates and 10% randomness from nearest neighbors.}
                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, while maintaining 90% selection from top 3 candidates and 10% randomness from nearest neighbors.}
                                                                                                                ^
SyntaxError: unmatched '}'
